fix image card overflow

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,9 @@ input:-webkit-autofill:focus {
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   color-scheme: dark;
-  overflow-x: hidden;
 }
+
+html, body { overflow-x: hidden; }
 
 .hash-span {
   margin-top: -100px;
